--- a/docs/content/cfginitstart_pxf.html.md.erb
+++ b/docs/content/cfginitstart_pxf.html.md.erb
@@ -40,7 +40,7 @@ After initializing PXF, you must start PXF on each segment host in your Greenplu
 
 If you want to change the default PXF configuration, you must update the configuration before you start PXF.
 
-`$PXF_CONF/conf` includes these user-customizable configuration files:
+`$PXF_BASE/conf` includes these user-customizable configuration files:
 
 - `pxf-env.sh` - runtime configuration parameters
 - `pxf-log4j.properties` - logging configuration parameters
@@ -51,7 +51,7 @@ The `pxf-env.sh` file exposes the following PXF runtime configuration parameters
 | Parameter  | Description | Default Value |
 |-----------|---------------| ------------|
 | JAVA_HOME    | The Java JRE home directory. | /usr/java/default |
-| PXF_LOGDIR   | The PXF log directory. | $PXF_CONF/logs |
+| PXF_LOGDIR   | The PXF log directory. | $PXF_BASE/logs |
 | PXF_JVM_OPTS  | Default options for the PXF Java virtual machine. | -Xmx2g -Xms1g |
 | PXF_MAX_THREADS  | Default for the maximum number of PXF threads. | 200 |
 | PXF_FRAGMENTER_CACHE  | Enable/disable fragment caching. | Enabled |
@@ -109,7 +109,7 @@ Perform the following procedure to stop PXF on each segment host in your Greenpl
 
 ## <a id="restart_pxf"></a>Restarting PXF
 
-If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_CONF/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all segment hosts in your Greenplum Database cluster.
+If you must restart PXF, for example if you updated PXF user configuration files in `$PXF_BASE/conf`, you run `pxf cluster restart` to stop, and then start, PXF on all segment hosts in your Greenplum Database cluster.
 
 Only the `gpadmin` user can restart the PXF service.
 
