--- a/docs/content/jdbc_pxf.html.md.erb
+++ b/docs/content/jdbc_pxf.html.md.erb
@@ -32,7 +32,7 @@ This section describes how to use the PXF JDBC connector to access data in an ex
 Before you access an external SQL database using the PXF JDBC connector, ensure that:
 
 - You have configured and initialized PXF, and PXF is running on each Greenplum Database segment host. See [Configuring PXF](instcfg_pxf.html) for additional information.
-- You can identify the PXF user configuration directory (`$PXF_CONF`).
+- You can identify the PXF runtime configuration directory (`$PXF_BASE`).
 - Connectivity exists between all Greenplum Database segment hosts and the external SQL database.
 - You have configured your external SQL database for user access from all Greenplum Database segment hosts.
 - You have registered any JDBC driver JAR dependencies.
@@ -450,7 +450,7 @@ This procedure will typically be performed by the Greenplum Database administrat
 2. Navigate to the JDBC server configuration directory `pgsrvcfg`. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/pgsrvcfg
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/pgsrvcfg
     ```
     
 3. Open a query text file named `pg_order_report.sql` in a text editor and copy/paste the following query into the file:
