--- a/docs/content/pxfuserimpers.html.md.erb
+++ b/docs/content/pxfuserimpers.html.md.erb
@@ -97,13 +97,13 @@ Perform the following procedure to configure the Hadoop user:
 3. Navigate to the server configuration directory. For example, if the server is named `hdp3`:
 
     ```shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/hdp3
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/hdp3
     ```
 
 4. If the server configuration does not yet include a `pxf-site.xml` file, copy the template file to the directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/pxf-site.xml .
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/pxf-site.xml .
     ```
 
 5. Open the `pxf-site.xml` file in the editor of your choice, and configure the Hadoop user name. When impersonation is disabled, this name identifies the Hadoop user identity that PXF will use to access the Hadoop system. When user impersonation is enabled, this name identifies the PXF proxy Hadoop user. For example, if you want to access Hadoop as the user `hdfsuser1`, uncomment the property and set it as follows:
@@ -131,13 +131,13 @@ PXF user impersonation is enabled by default for Hadoop servers. You can configu
 1. Navigate to the server configuration directory. For example, if the server is named `hdp3`:
 
     ```shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/hdp3
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/hdp3
     ```
 
 2. If the server configuration does not yet include a `pxf-site.xml` file, copy the template file to the directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/pxf-site.xml .
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/pxf-site.xml .
     ```
 
 3. Open the `pxf-site.xml` file in the editor of your choice, and update the user impersonation property setting. For example, if you do not require user impersonation for this server configuration, set the `pxf.service.user.impersonation` property to `false`:
@@ -195,7 +195,7 @@ When PXF user impersonation is enabled for a Hadoop server configuration, you mu
 
 4. You must restart Hadoop for your `core-site.xml` changes to take effect.
 
-5. Copy the updated `core-site.xml` file to the PXF Hadoop server configuration directory `$PXF_CONF/servers/<server_name>` on the Greenplum Database master and synchronize the configuration to the standby master and each Greenplum Database segment host.
+5. Copy the updated `core-site.xml` file to the PXF Hadoop server configuration directory `$PXF_BASE/servers/<server_name>` on the Greenplum Database master and synchronize the configuration to the standby master and each Greenplum Database segment host.
 
 ## <a id="hive"></a>Hive User Impersonation
 
