--- a/docs/content/cfg_server.html.md.erb
+++ b/docs/content/cfg_server.html.md.erb
@@ -9,7 +9,7 @@ You read from or write data to an external data store via a PXF connector. To ac
 - Supporting file-based connector and user configuration
 - Providing connector-specific template configuration files
 
-A PXF *Server* definition is simply a named configuration that provides access to a specific external data store. A PXF server name is the name of a directory residing in `$PXF_CONF/servers/`. The information that you provide in a server configuration is connector-specific. For example, a PXF JDBC Connector server definition may include settings for the JDBC driver class name, URL, username, and password. You can also configure connection-specific and session-specific properties in a JDBC server definition.
+A PXF *Server* definition is simply a named configuration that provides access to a specific external data store. A PXF server name is the name of a directory residing in `$PXF_BASE/servers/`. The information that you provide in a server configuration is connector-specific. For example, a PXF JDBC Connector server definition may include settings for the JDBC driver class name, URL, username, and password. You can also configure connection-specific and session-specific properties in a JDBC server definition.
 
 PXF provides a server template file for each connector; this template identifies the typical set of properties that you must configure to use the connector.
 
@@ -20,12 +20,12 @@ A server configuration may include default settings for user access credentials 
 
 ## <a id="templates"></a>About Server Template Files
 
-The configuration information for a PXF server resides in one or more `<connector>-site.xml` files in `$PXF_CONF/servers/<server_name>/`. 
+The configuration information for a PXF server resides in one or more `<connector>-site.xml` files in `$PXF_BASE/servers/<server_name>/`.
 
-PXF provides a template configuration file for each connector.  These server template configuration files are located in the `$PXF_CONF/templates/` directory after you initialize PXF:
+PXF provides a template configuration file for each connector.  These server template configuration files are located in the `$PXF_HOME/templates/` directory after you install PXF:
 
 ```
-gpadmin@gpmaster$ ls $PXF_CONF/templates
+gpadmin@gpmaster$ ls $PXF_HOME/templates
 adl-site.xml   hbase-site.xml  jdbc-site.xml    pxf-site.xml    yarn-site.xml
 core-site.xml  hdfs-site.xml   mapred-site.xml  s3-site.xml
 gs-site.xml    hive-site.xml   minio-site.xml   wasbs-site.xml
@@ -58,7 +58,7 @@ For example, the contents of the `s3-site.xml` template file follow:
 
 ## <a id="default"></a>About the Default Server
 
-PXF defines a special server named `default`. When you initialize PXF, it automatically creates a `$PXF_CONF/servers/default/` directory. This directory, initially empty, identifies the default PXF server configuration. You can configure and assign the default PXF server to any external data source. For example, you can assign the PXF default server to a Hadoop cluster, or to a MySQL database that your users frequently access.
+PXF defines a special server named `default`. The PXF installation creates a `$PXF_BASE/servers/default/` directory. This directory, initially empty, identifies the default PXF server configuration. You can configure and assign the default PXF server to any external data source. For example, you can assign the PXF default server to a Hadoop cluster, or to a MySQL database that your users frequently access.
 
 PXF automatically uses the `default` server configuration if you omit the `SERVER=<server_name>` setting in the `CREATE EXTERNAL TABLE` command `LOCATION` clause.
 
@@ -68,7 +68,7 @@ PXF automatically uses the `default` server configuration if you omit the `SERVE
 When you configure a PXF connector to an external data store, you add a named PXF server configuration for the connector. Among the tasks that you perform, you may:
 
 1. Determine if you are configuring the `default` PXF server, or choose a new name for the server configuration.
-2. Create the directory `$PXF_CONF/servers/<server_name>`.
+2. Create the directory `$PXF_BASE/servers/<server_name>`.
 3. Copy template or other configuration files to the new server directory.
 4. Fill in appropriate default values for the properties in the template file.
 5. Add any additional configuration properties and values required for your environment.
@@ -104,7 +104,7 @@ You configure properties in the `pxf-site.xml` file for a PXF server when one or
 | Property       | Description                                | Default Value |
 |----------------|--------------------------------------------|---------------|
 | pxf.service.kerberos.principal | The Kerberos principal name. | gpadmin/\_HOST@EXAMPLE.COM |
-| pxf.service.kerberos.keytab | The file system path to the Kerberos keytab file. | $PXF_CONF/keytabs/pxf.service.keytab |
+| pxf.service.kerberos.keytab | The file system path to the Kerberos keytab file. | $PXF_BASE/keytabs/pxf.service.keytab |
 | pxf.service.user.impersonation | Enables/disables user impersonation on the remote system. | If the `pxf.service.user.impersonation` property is missing from `pxf-site.xml`, the default is `true` (enabled) for PXF Hadoop servers and `false` (disabled) for JDBC servers. |
 | pxf.service.user.name | The log in user for the remote system. | This property is commented out by default. When the property is unset, the default value is the operating system user that starts the pxf process, typically `gpadmin`. When the property is set, the default value depends on the user impersonation setting and, if you are accessing Hadoop, whether or not you are accessing a Kerberos-secured cluster; see the [Use Cases and Configuration Scenarios](pxfuserimpers.html#pxf_cfg_scenarios) section in the *Configuring the Hadoop User, User Impersonation, and Proxying* topic. |
 | pxf.fs.basePath | Identifies the base path or share point on the remote file system. This property is applicable when the server configuration is used with a profile that accesses a file. | None; this property is commented out by default. |
@@ -129,12 +129,12 @@ You can configure access to an external data store on a per-server, per-Greenplu
 
 <div class="note info">PXF per-server, per-user configuration provides the most benefit for JDBC servers.</div>
 
-You configure external data store user access credentials and properties for a specific Greenplum Database user by providing a `<greenplum_user_name>-user.xml` user configuration file in the PXF server configuration directory, `$PXF_CONF/servers/<server_name>/`. For example, you specify the properties for the Greenplum Database user named `bill` in the file `$PXF_CONF/servers/<server_name>/bill-user.xml`. You can configure zero, one, or more users in a PXF server configuration.
+You configure external data store user access credentials and properties for a specific Greenplum Database user by providing a `<greenplum_user_name>-user.xml` user configuration file in the PXF server configuration directory, `$PXF_BASE/servers/<server_name>/`. For example, you specify the properties for the Greenplum Database user named `bill` in the file `$PXF_BASE/servers/<server_name>/bill-user.xml`. You can configure zero, one, or more users in a PXF server configuration.
 
 
 The properties that you specify in a user configuration file are connector-specific. You can specify any configuration property supported by the PXF connector server in a `<greenplum_user_name>-user.xml` configuration file.
 
-For example, suppose you have configured access to a PostgreSQL database in the PXF JDBC server configuration named `pgsrv1`. To allow the Greenplum Database user named `bill` to access this database as the PostgreSQL user named `pguser1`, password `changeme`, you create the user configuration file `$PXF_CONF/servers/pgsrv1/bill-user.xml` with the following properties:
+For example, suppose you have configured access to a PostgreSQL database in the PXF JDBC server configuration named `pgsrv1`. To allow the Greenplum Database user named `bill` to access this database as the PostgreSQL user named `pguser1`, password `changeme`, you create the user configuration file `$PXF_BASE/servers/pgsrv1/bill-user.xml` with the following properties:
 
 ``` xml
 <configuration>
@@ -169,7 +169,7 @@ For each PXF user that you want to configure, you will:
 1. Identify the name of the Greenplum Database user.
 2. Identify the PXF server definition for which you want to configure user access.
 3. Identify the name and value of each property that you want to configure for the user.
-4. Create/edit the file `$PXF_CONF/servers/<server_name>/<greenplum_user_name>-user.xml`, and add the outer configuration block:
+4. Create/edit the file `$PXF_BASE/servers/<server_name>/<greenplum_user_name>-user.xml`, and add the outer configuration block:
 
     ``` xml
     <configuration>
@@ -196,7 +196,7 @@ These precedence rules allow you create a single external table that can be acce
 
 To access an external data store, the Greenplum Database user specifies the server name in the `CREATE EXTERNAL TABLE` command `LOCATION` clause `SERVER=<server_name>` option. The `<server_name>` that the user provides identifies the server configuration directory from which PXF obtains the configuration and credentials to access the external data store.
 
-For example, the following command accesses an S3 object store using the server configuration defined in the `$PXF_CONF/servers/s3srvcfg/s3-site.xml` file:
+For example, the following command accesses an S3 object store using the server configuration defined in the `$PXF_BASE/servers/s3srvcfg/s3-site.xml` file:
 
 <pre>
 CREATE EXTERNAL TABLE pxf_ext_tbl(name text, orders int)
