--- a/docs/content/client_instcfg.html.md.erb
+++ b/docs/content/client_instcfg.html.md.erb
@@ -15,7 +15,7 @@ Configuring PXF Hadoop connectors involves copying configuration files from your
 
 Perform the following procedure to configure the desired PXF Hadoop-related connectors on the Greenplum Database master host. After you configure the connectors, you will use the `pxf cluster sync` command to copy the PXF configuration to the Greenplum Database cluster.
 
-In this procedure, you use the `default`, or create a new, PXF server configuration. You copy Hadoop configuration files to the server configuration directory on the Greenplum Database master host. You identify Kerberos and user impersonation settings required for access, if applicable. You may also copy libraries to `$PXF_CONF/lib` for MapR support. You then synchronize the PXF configuration on the master host to the standby master and segment hosts. (PXF creates the`$PXF_CONF/*` directories when you run `pxf cluster init`.)
+In this procedure, you use the `default`, or create a new, PXF server configuration. You copy Hadoop configuration files to the server configuration directory on the Greenplum Database master host. You identify Kerberos and user impersonation settings required for access, if applicable. You may also copy libraries to `$PXF_BASE/lib` for MapR support. You then synchronize the PXF configuration on the master host to the standby master and segment hosts.
 
 1. Log in to your Greenplum Database master node:
 
@@ -25,22 +25,22 @@ In this procedure, you use the `default`, or create a new, PXF server configurat
 
 2. Identify the name of your PXF Hadoop server configuration.
 
-3. If you are not using the `default` PXF server, create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a Hadoop server configuration named `hdp3`:
+3. If you are not using the `default` PXF server, create the `$PXF_BASE/servers/<server_name>` directory. For example, use the following command to create a Hadoop server configuration named `hdp3`:
 
     ``` shell
-    gpadmin@gpmaster$ mkdir $PXF_CONF/servers/hdp3
+    gpadmin@gpmaster$ mkdir $PXF_BASE/servers/hdp3
     ````
 
 4. Change to the server directory. For example:
 
     ```shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/default
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/default
     ```
 
     Or,
 
     ```shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/hdp3
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/hdp3
     ```
 
 2. PXF requires information from `core-site.xml` and other Hadoop configuration files. Copy the `core-site.xml`, `hdfs-site.xml`, `mapred-site.xml`, and `yarn-site.xml` Hadoop configuration files from your Hadoop cluster NameNode host to the current host using your tool of choice. Your file paths may differ based on the Hadoop distribution in use. For example, these commands use `scp` to copy the files:
@@ -67,7 +67,7 @@ In this procedure, you use the `default`, or create a new, PXF server configurat
 2. If you are using PXF with the MapR Hadoop distribution, you must copy certain JAR files from your MapR cluster to the Greenplum Database master host. (Your file paths may differ based on the version of MapR in use.) For example, these commands use `scp` to copy the files:
 
     ``` shell
-    gpadmin@gpmaster$ cd $PXF_CONF/lib
+    gpadmin@gpmaster$ cd $PXF_BASE/lib
     gpadmin@gpmaster$ scp mapruser@maprhost:/opt/mapr/hadoop/hadoop-2.7.0/share/hadoop/common/lib/maprfs-5.2.2-mapr.jar .
     gpadmin@gpmaster$ scp mapruser@maprhost:/opt/mapr/hadoop/hadoop-2.7.0/share/hadoop/common/lib/hadoop-auth-2.7.0-mapr-1707.jar .
     gpadmin@gpmaster$ scp mapruser@maprhost:/opt/mapr/hadoop/hadoop-2.7.0/share/hadoop/common/hadoop-common-2.7.0-mapr-1707.jar .
@@ -88,10 +88,10 @@ In this procedure, you use the `default`, or create a new, PXF server configurat
 
 ## <a id="client-cfg-update"></a>About Updating the Hadoop Configuration
 
-If you update your Hadoop, Hive, or HBase configuration while the PXF service is running, you must copy the updated configuration to the `$PXF_CONF/servers/<server_name>` directory and re-sync the PXF configuration to your Greenplum Database cluster. For example:
+If you update your Hadoop, Hive, or HBase configuration while the PXF service is running, you must copy the updated configuration to the `$PXF_BASE/servers/<server_name>` directory and re-sync the PXF configuration to your Greenplum Database cluster. For example:
 
 ``` shell
-gpadmin@gpmaster$ cd $PXF_CONF/servers/<server_name>
+gpadmin@gpmaster$ cd $PXF_BASE/servers/<server_name>
 gpadmin@gpmaster$ scp hiveuser@hivehost:/etc/hive/conf/hive-site.xml .
 gpadmin@gpmaster$ pxf cluster sync
 ```
