--- a/docs/content/hive_jdbc_cfg.html.md.erb
+++ b/docs/content/hive_jdbc_cfg.html.md.erb
@@ -58,28 +58,28 @@ Perform the following procedure to configure a PXF JDBC server for Hive:
 
 2. Choose a name for the JDBC server.
 
-3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `hivejdbc1`:
+3. Create the `$PXF_BASE/servers/<server_name>` directory. For example, use the following command to create a JDBC server configuration named `hivejdbc1`:
 
     ``` shell
-    gpadmin@gpmaster$ mkdir $PXF_CONF/servers/hivejdbc1
+    gpadmin@gpmaster$ mkdir $PXF_BASE/servers/hivejdbc1
     ````
 
 3. Navigate to the server configuration directory. For example:
 
     ```shell
-    gpadmin@gpmaster$ cd $PXF_CONF/servers/hivejdbc1
+    gpadmin@gpmaster$ cd $PXF_BASE/servers/hivejdbc1
     ```
 
 4. Copy the PXF JDBC server template file to the server configuration directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/jdbc-site.xml .
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/jdbc-site.xml .
     ```
         
 4. When you access Hive secured with Kerberos, you also need to specify configuration properties in the `pxf-site.xml` file. *If this file does not yet exist in your server configuration*, copy the `pxf-site.xml` template file to the server config directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/pxf-site.xml .
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/pxf-site.xml .
     ```
         
 5. Open the `jdbc-site.xml` file in the editor of your choice and set the `jdbc.driver` and `jdbc.url` properties. Be sure to specify your Hive host, port, and database name:
@@ -136,7 +136,7 @@ Perform the following procedure to configure a PXF JDBC server for Hive:
     1. Identify the name of the server configuration.
     2. Ensure that you have configured Kerberos authentication for PXF as described in [Configuring PXF for Secure HDFS](pxf_kerbhdfs.html), and that you have specified the Kerberos principal and keytab in the `pxf-site.xml` properties as described in the procedure.
     3. Comment out the `pxf.service.user.impersonation` property in the `pxf-site.xml` file. If you require user impersonation, you will uncomment and set the property in an upcoming step.)
-    3. Uncomment the `hadoop.security.authentication` setting in `$PXF_CONF/servers/<name>/jdbc-site.xml`:
+    3. Uncomment the `hadoop.security.authentication` setting in `$PXF_BASE/servers/<name>/jdbc-site.xml`:
 
         ``` xml
         <property>
