--- a/docs/content/nfs_pxf.html.md.erb
+++ b/docs/content/nfs_pxf.html.md.erb
@@ -22,7 +22,7 @@ PXF does not support user impersonation when you access a network file system. P
 Before you use PXF to access files on a network file system, ensure that:
 
 - You have configured and initialized PXF, and PXF is running on each Greenplum Database segment host. See [Configuring PXF](instcfg_pxf.html) for additional information.
-- You can identify the PXF user configuration directory (`$PXF_CONF`).
+- You can identify the PXF runtime configuration directory (`$PXF_BASE`).
 - All files are accessible by `gpadmin` or by the operating system user that started the PXF process.
 - The network file system is correctly mounted at the same local mount point on every Greenplum Database segment host.
 - You can identify the mount or share point of the network file system.
@@ -32,7 +32,7 @@ Before you use PXF to access files on a network file system, ensure that:
 
 Before you use PXF to access a file on a network file system, you must create a server configuration and then synchronize the PXF configuration to all Greenplum hosts.  This procedure will typically be performed by the Greenplum Database administrator.
 
-Use the server template configuration file `$PXF_CONF/templates/pxf-site.xml` when you configure a network file system server for PXF. This template file includes the mandatory property `pxf.fs.basePath` that you configure to identify the network file system share path. PXF considers the file path that you specify in a `CREATE EXTERNAL TABLE` `LOCATION` clause that uses this server to be relative to this share path.
+Use the server template configuration file `$PXF_HOME/templates/pxf-site.xml` when you configure a network file system server for PXF. This template file includes the mandatory property `pxf.fs.basePath` that you configure to identify the network file system share path. PXF considers the file path that you specify in a `CREATE EXTERNAL TABLE` `LOCATION` clause that uses this server to be relative to this share path.
 
 PXF does not support user impersonation when you access a network file system; you must explicitly turn off user impersonation in a network file system server configuration.
 
@@ -46,16 +46,16 @@ PXF does not support user impersonation when you access a network file system; y
 
     **Note**: The server name `default` is reserved.
 
-3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a file system server configuration named `nfssrvcfg`:
+3. Create the `$PXF_BASE/servers/<server_name>` directory. For example, use the following command to create a file system server configuration named `nfssrvcfg`:
 
     ``` shell
-    gpadmin@gpmaster$ mkdir $PXF_CONF/servers/nfssrvcfg
+    gpadmin@gpmaster$ mkdir $PXF_BASE/servers/nfssrvcfg
     ````
 
 4. Copy the PXF `pxf-site.xml` template file to the `nfssrvcfg` server configuration directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/pxf-site.xml $PXF_CONF/servers/nfssrvcfg/
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/pxf-site.xml $PXF_BASE/servers/nfssrvcfg/
     ```
 
 5. Open the template server configuration file in the editor of your choice, and uncomment and provide property values appropriate for your environment. For example, if the file system share point is the directory named `/mnt/extdata/pxffs`, uncomment and set these server properties:
