--- a/docs/content/objstore_cfg.html.md.erb
+++ b/docs/content/objstore_cfg.html.md.erb
@@ -10,12 +10,12 @@ You can use PXF to access Azure Data Lake, Azure Blob Storage, and Google Cloud 
 
 To access data in an object store, you must provide a server location and client credentials. When you configure a PXF object store connector, you add at least one named PXF server configuration for the connector as described in [Configuring PXF Servers](cfg_server.html).
 
-PXF provides a template configuration file for each object store connector. These template files are located in the `$PXF_CONF/templates/` directory.
+PXF provides a template configuration file for each object store connector. These template files are located in the `$PXF_HOME/templates/` directory.
 
 
 ### <a id="abs_cfg"></a>Azure Blob Storage Server Configuration
 
-The template configuration file for Azure Blob Storage is `$PXF_CONF/templates/wasbs-site.xml`. When you configure an Azure Blob Storage server, you must provide the following server configuration properties and replace the template value with your account name:
+The template configuration file for Azure Blob Storage is `$PXF_HOME/templates/wasbs-site.xml`. When you configure an Azure Blob Storage server, you must provide the following server configuration properties and replace the template value with your account name:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|-------|
@@ -26,7 +26,7 @@ The template configuration file for Azure Blob Storage is `$PXF_CONF/templates/w
 
 ### <a id="adl_cfg"></a>Azure Data Lake Server Configuration
 
-The template configuration file for Azure Data Lake is `$PXF_CONF/templates/adl-site.xml`. When you configure an Azure Data Lake server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for Azure Data Lake is `$PXF_HOME/templates/adl-site.xml`. When you configure an Azure Data Lake server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|-------|
@@ -38,7 +38,7 @@ The template configuration file for Azure Data Lake is `$PXF_CONF/templates/adl-
 
 ### <a id="gcs_cfg"></a>Google Cloud Storage Server Configuration
 
-The template configuration file for Google Cloud Storage is `$PXF_CONF/templates/gs-site.xml`. When you configure a Google Cloud Storage server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for Google Cloud Storage is `$PXF_HOME/templates/gs-site.xml`. When you configure a Google Cloud Storage server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|-------|
@@ -51,7 +51,7 @@ The template configuration file for Google Cloud Storage is `$PXF_CONF/templates
 
 Ensure that you have initialized PXF before you configure an object store connector server.
 
-In this procedure, you name and add a PXF server configuration in the `$PXF_CONF/servers` directory on the Greenplum Database master host for the Google Cloud Storate (GCS) connector. You then use the `pxf cluster sync` command to sync the server configuration(s) to the Greenplum Database cluster.
+In this procedure, you name and add a PXF server configuration in the `$PXF_BASE/servers` directory on the Greenplum Database master host for the Google Cloud Storate (GCS) connector. You then use the `pxf cluster sync` command to sync the server configuration(s) to the Greenplum Database cluster.
 
 1. Log in to your Greenplum Database master node:
 
@@ -61,16 +61,16 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_CONF
 
 2. Choose a name for the server. You will provide the name to end users that need to reference files in the object store.
 
-3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a server configuration for a Google Cloud Storage server named `gs_public`:
+3. Create the `$PXF_BASE/servers/<server_name>` directory. For example, use the following command to create a server configuration for a Google Cloud Storage server named `gs_public`:
 
     ``` shell
-    gpadmin@gpmaster$ mkdir $PXF_CONF/servers/gs_public
+    gpadmin@gpmaster$ mkdir $PXF_BASE/servers/gs_public
     ````
 
 3. Copy the PXF template file for GCS to the server configuration directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/gs-site.xml $PXF_CONF/servers/gs_public/
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/gs-site.xml $PXF_BASE/servers/gs_public/
     ```
         
 4. Open the template server configuration file in the editor of your choice, and provide appropriate property values for your environment. For example, if your Google Cloud Storage key file is located in `/home/gpadmin/keys/gcs-account.key.json`:
