--- a/docs/content/s3_objstore_cfg.html.md.erb
+++ b/docs/content/s3_objstore_cfg.html.md.erb
@@ -10,12 +10,12 @@ You can use PXF to access S3-compatible object stores. This topic describes how 
 
 To access data in an object store, you must provide a server location and client credentials. When you configure a PXF object store connector, you add at least one named PXF server configuration for the connector as described in [Configuring PXF Servers](cfg_server.html).
 
-PXF provides a template configuration file for each object store connector. These template files are located in the `$PXF_CONF/templates/` directory.
+PXF provides a configuration file template for each object store connector. These template files are located in the `$PXF_HOME/templates/` directory.
 
 
 ## <a id="minio_cfg"></a>Minio Server Configuration
 
-The template configuration file for Minio is `$PXF_CONF/templates/minio-site.xml`. When you configure a Minio server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for Minio is `$PXF_HOME/templates/minio-site.xml`. When you configure a Minio server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|------ |
@@ -25,7 +25,7 @@ The template configuration file for Minio is `$PXF_CONF/templates/minio-site.xml
 
 ## <a id="s3_cfg"></a>S3 Server Configuration
 
-The template configuration file for S3 is `$PXF_CONF/templates/s3-site.xml`. When you configure an S3 server, you must provide the following server configuration properties and replace the template values with your credentials:
+The template configuration file for S3 is `$PXF_HOME/templates/s3-site.xml`. When you configure an S3 server, you must provide the following server configuration properties and replace the template values with your credentials:
 
 | Property       | Description                                | Value |
 |----------------|--------------------------------------------|-------|
@@ -145,7 +145,7 @@ To enable SSE-C for a specific S3 bucket, use the property name variants that in
 
 Ensure that you have initialized PXF before you configure an object store connector server.
 
-In this procedure, you name and add a PXF server configuration in the `$PXF_CONF/servers` directory on the Greenplum Database master host for the S3 Cloud Storage connector. You then use the `pxf cluster sync` command to sync the server configuration(s) to the Greenplum Database cluster.
+In this procedure, you name and add a PXF server configuration in the `$PXF_BASE/servers` directory on the Greenplum Database master host for the S3 Cloud Storage connector. You then use the `pxf cluster sync` command to sync the server configuration(s) to the Greenplum Database cluster.
 
 1. Log in to your Greenplum Database master node:
 
@@ -155,16 +155,16 @@ In this procedure, you name and add a PXF server configuration in the `$PXF_CONF
 
 2. Choose a name for the server. You will provide the name to end users that need to reference files in the object store.
 
-3. Create the `$PXF_CONF/servers/<server_name>` directory. For example, use the following command to create a server configuration for an S3 server named `s3srvcfg`:
+3. Create the `$PXF_BASE/servers/<server_name>` directory. For example, use the following command to create a server configuration for an S3 server named `s3srvcfg`:
 
     ``` shell
-    gpadmin@gpmaster$ mkdir $PXF_CONF/servers/s3srvcfg
+    gpadmin@gpmaster$ mkdir $PXF_BASE/servers/s3srvcfg
     ````
 
 3. Copy the PXF template file for S3 to the server configuration directory. For example:
 
     ``` shell
-    gpadmin@gpmaster$ cp $PXF_CONF/templates/s3-site.xml $PXF_CONF/servers/s3srvcfg/
+    gpadmin@gpmaster$ cp $PXF_HOME/templates/s3-site.xml $PXF_BASE/servers/s3srvcfg/
     ```
         
 4. Open the template server configuration file in the editor of your choice, and provide appropriate property values for your environment. For example:
